public/styles/global.css
@font-face {
    font-family: 'Lora';
    src: url('/fonts/Lora-Regular.woff2') format('woff2');
}

@font-face {
    font-family: 'Lora';
    src: url('/fonts/Lora-Italic.woff2') format('woff2');
    font-style: italic;
}

@font-face {
    font-family: 'Lora';
    src: url('/fonts/Lora-Bold.woff2') format('woff2');
    font-weight: bold;
}

@font-face {
    font-family: 'IBM Plex Mono';
    src: url('/fonts/IBMPlexMono-Regular.woff2') format('woff2');
}

@font-face {
    font-family: 'IBM Plex Mono';
    src: url('/fonts/IBMPlexMono-Italic.woff2') format('woff2');
    font-style: italic;
}

:root {
    font-size: clamp(14px, 3vw, 18px);
    line-height: 1.7;
    --background: #fff2d1;
    --text: #655a3d;
}

body,
p {
    padding: 0;
    margin: 0;
}

body {
    background: var(--background);
    color: var(--text);
    font-family: 'Lora', serif;
    overscroll-behavior-y: none;
}

.site-wrapper {
    padding: clamp(4px, 6vw, 4rem);
    width: 100vw;
    max-width: 100vw;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

#skip-link {
    opacity: 0;
    position: absolute;
    padding: 1rem;
    border-radius: 4px;
    background: var(--text);
    color: var(--background);
}

#skip-link:focus {
    opacity: 1;
    pointer-events: unset;
}

a,
a:visited {
    color: currentColor;
    text-decoration: none;
    border-bottom: 1px dotted currentColor;
    font-size: .8rem;
    background: 0 0;
}

a:hover {
    background: var(--text);
    color: var(--background);
    border: 0;
}

a.current-link {
    background: var(--text);
    color: var(--background);
    box-shadow: 0 0 0 2px var(--text);
}

.title-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.nav-links {
    padding: 0;
    margin-top: clamp(1.563rem, 4vw, 2.441rem);
}

.nav-links ul {
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    max-width: 100vw;
    margin: clamp(-1.22rem, -3vw, -.4rem);
    padding: 0;
    font-size: .8rem;
    overflow: hidden;
}

.nav-links ul li {
    margin: clamp(.4rem, 3vw, 1.22rem);
}

.nav-links ul {
    justify-content: space-between;
}

main {
    padding: 3.815rem 0 .8rem;
}

.text-content {
    line-height: 1.7;
    display: grid;
    grid-template-columns: 1fr;
    grid-auto-rows: auto;
}

.text-content > * {
    grid-column: 1 / 2;
    margin-top: 0;
    margin-bottom: 0;
    max-width: 65ch;
}

.text-content > * + *, .text-content > div > * + *, .text-content > h1 + *, section > h1 + * {
    margin-top: 1.563rem;
}

h1, .h1 {
    font-size: 1.563rem;
    margin-top: 0;
    font-weight: 400;
}

h2, .h2, .site-title {
    font-size: 1.25rem;
    font-weight: 400;
}

.link-tree li a {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: .8rem;
    width: 100%;
    max-width: 35rem;
    border: 1px dotted var(--text);
    border-radius: 4px;
    font-family: 'IBM Plex Mono', 'Courier New', Courier, monospace;
}

footer {
    margin-top: auto;
    padding: 3.815rem 0 .8rem;
}

.footer-links ul {
    justify-content: flex-start;
    margin: -1.91rem;
}

.footer-links ul li {
    margin: 1.91rem;
}

#kofi {
    position: relative;
    display: flex;
}

.kofi-button {
    transform: none;
    position: relative;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    font-family: 'IBM Plex Mono', 'Courier New', Courier, monospace;
}

.kofi-button img {
    position: relative;
    display: inline-block;
    animation: 3s infinite wiggle;
    margin-right: .8rem;
    z-index: 3;
}

@keyframes wiggle {
    0%, 60%, 100% {
        transform: rotate(0) scale(1.0);
    }
    75% {
        transform: rotate(0) scale(1.12);
    }
    80% {
        transform: rotate(0) scale(1.1);
    }
    84%, 92% {
        transform: rotate(-10deg) scale(1.1);
    }
    88%, 96% {
        transform: rotate(10deg) scale(1.1);
    }
}

.button, .button:visited, a.kofi-button {
    display: flex;
    justify-content: center;
    align-items: center;
    border: 0;
    background: var(--text);
    padding: .512rem .8rem;
    font-size: .8rem;
    padding: clamp(.3rem, .4vw, .512rem) clamp(.512rem, .5vw, .8rem);
    border-radius: 4px;
    color: var(--background);
}

#color {
    font-family: 'IBM Plex Mono', 'Courier New', Courier, monospace;
    box-shadow: 0 2px var(--background), 0 4px var(--text);
    margin-bottom: 4px;
    transform: translateY(0);
    position: relative;
}

#color:hover {
    transform: translateY(2px);
    box-shadow: 0 2px var(--background), 0 3px var(--text);
}

#color:active {
    transform: translateY(3px);
    box-shadow: none;
}

.productions {
    font-size: .8rem;
    color: var(--text);
    border-collapse: collapse;
    width: 100%;
    font-family: 'IBM Plex Mono', 'Courier New', Courier, monospace;
}

.productions tr + tr {
    border-top: 1px dotted var(--text);
}

.productions td, .productions th {
    padding: .4rem;
    vertical-align: top;
}

.productions .year {
    white-space: nowrap;
}

.productions .title a {
    font-style: italic;
}

.production-meta {
    display: block;
}

#filter {
    position: fixed;
    top: -400px;
    left: -400px;
    bottom: -400px;
    right: -400px;
    z-index: 2;
    pointer-events: none;
}

blockquote {
    margin-left: 0;
    margin-right: 0;
    padding: 1rem;
    border: 1px dotted var(--text);
    border-radius: 4px;
}

blockquote p {
    margin-top: 0;
    font-size: .8rem;
}

cite {
    font-style: normal;
    margin-top: 1rem;
    display: block;
}

cite:before {
    content: '— ';
}

cite a {
    font-size: 1rem;
}

.testimonials blockquote + blockquote {
    margin-top: 1.563rem;
}

@media screen and (min-width: 1300px) {
    .text-content {
        grid-template-columns: minmax(65ch, 1fr) minmax(10rem, auto);
    }

    .text-content > .testimonials {
        grid-column: 2 / 3;
        margin-left: clamp(4px, 6vw, 4rem);
    }

    .testimonials blockquote {
        margin-top: 0;
        margin-left: auto;
        margin-right: auto;
    }
}

